# app-pecha-backend

./: .env  .gitignore  Dockerfile  README.md  RELEASE_PROCESS.md  alembic.ini  apply_br.py  check_db_data.py  choejuk.json  choejuk_br.json  env.py  extract_text.py  for_apply_br.py  pyproject.toml  simple_datetime_update.py  sonar-project.properties  start_dev.sh  test.db  update_segments_in_db.py  verify_connection.py
dev/: README.md  (+4 more)
pecha_api/: .gitignore  .gitignore copy  README.md  app.py  cache.py  config.py  constants.py  error_contants.py  http_message_utils.py  image_utils.py  pyproject.toml  utils.py
pecha_api/auth/: auth_enums.py  auth_models.py  auth_repository.py  auth_service.py  auth_views.py  enums.py  models.py  password_reset_repository.py  repository.py  reset_password_template.html  service.py  views.py
pecha_api/cache/: cache_enums.py  cache_repository.py  cache_service.py
pecha_api/cataloger/: cataloger_response_model.py  cataloger_service.py  cataloger_views.py
pecha_api/chats/: chats_models.py
pecha_api/collections/: collections_cache_service.py  collections_models.py  collections_repository.py  collections_response_models.py  collections_service.py  collections_views.py
pecha_api/db/: database.py  mongo_database.py
pecha_api/notification/: email_provider.py
pecha_api/pecha_api/: app.py
pecha_api/plans/: __init__.py  plan_auth.enum.py  plan_enums.py  plan_models.py  plan_repository.py  plan_response_model.py  plan_service.py  plan_utils.py  plans_enums.py  plans_models.py  plans_repository.py  plans_response_models.py  plans_service.py  plans_views.py  response_message.py
pecha_api/recitations/: recication_cache_services.py  recitations_enum.py  recitations_models.py  recitations_repository.py  recitations_response_models.py  recitations_services.py  recitations_view.py
pecha_api/search/: index_management.py  search_cache_service.py  search_client.py  search_enums.py  search_response_models.py  search_service.py  search_views.py
pecha_api/share/: pecha_text_image.py  pecha_text_image_generator.py  pecha_text_image_generator_config.py  share_enums.py  share_response_models.py  share_service.py  share_utils.py  share_views.py  short_url_service.py
pecha_api/sheets/: sheets_cache_service.py  sheets_enum.py  sheets_models.py  sheets_repository.py  sheets_response_models.py  sheets_service.py  sheets_views.py
pecha_api/short_url/: short_url_service.py
(+442 files in other folders)
