[tool.poetry]
name = "pecha-api"
version = "0.1.0"
description = ""
authors = ["tenzinsamten <iamsamten>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
python-jose = "^3.3.0"
passlib = "^1.7.4"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.1"
starlette = "^0.41.3"
python-dotenv = "^1.0.1"
bcrypt = "^4.2.1"
alembic = "^1.14.0"
pyjwt = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn:main"
